@@ -94,7 +94,7 @@ public final class AIDecisionService {
         }
 
         if (bestPositions.size() == 1) {
-            return bestPositions.get(0);
+            return bestPositions.getFirst();
         } else {
             List<Integer> tieWeights = createTieWeights(bestPositions.size(), TIE_WEIGHT_VALUE);
             int selectedIndex = weightedRandomSelector.selectWeightedRandom(tieWeights);
@@ -313,7 +313,7 @@ public final class AIDecisionService {
         int score = scoreDirectionalAction(source, target, unit, currentTeam, targetEntity);
         actionScores.add(new ActionScore(UnitActionType.MOVE, target, score));
     }
-    //TargetEntity kann leer sein, eigenes Team, oder Gegner, ABER: Nicht eigener König!
+    //TargetEntity kann leer sein, eigenes Team, oder Gegner, ABER: nicht eigener König!
     private int scoreDirectionalAction(Position source, Position target, Unit unit, TeamID currentTeam, BoardEntity targetEntity) {
         if (targetEntity == null) {
             Position enemyKingPosition = game.getKingPosition(game.getEnemyTeamID());
